--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ license = "GPL-3.0"
 
 [dependencies]
 png = "0.17.10"
-viuer = "0.7.1"
 rayon = "1.8.0"
 log = "0.4.20"
 env_logger = "0.10.0"
 rand = "0.8.5"
+toml = "0.8.6"
+serde = { version = "1.0.190", features = ["derive"] }
+notify = "6.1.1"
