--- a/test_scene.toml
+++ b/test_scene.toml
@@ -2,7 +2,7 @@
 name = "main"
 from = [10, 10, 5]
 to = [0, 0, 0]
-pixel_size = [1920, 1080]
+pixel_size = [512, 288]
 samples = 1
 max_depth = 10
 
@@ -20,50 +20,52 @@ dielectric = [
 
 [objects]
 spheres = [
-    {center = [-6.5, 0, 3], radius = 4, material = "dull grey"},
-    {center = [0, 0, 3], radius = 2.5, material = "blue mirror"},
-    {center = [6.5, 0, 3], radius = 4, material = "green glass"},
-
-   {center = [0, 0, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, 0, 1], radius = 0.5, material = "green glass"},
-   {center = [0, 0, 2], radius = 0.5, material = "dull grey"},
-   {center = [0, 0, 3], radius = 0.5, material = "blue mirror"},
-   {center = [0, 0, 4], radius = 0.5, material = "green glass"},
-   {center = [0, 0, 5], radius = 0.5, material = "dull grey"},
-   {center = [0, 1, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, 2, 0], radius = 0.5, material = "green glass"},
-   {center = [0, 3, 0], radius = 0.5, material = "dull grey"},
-   {center = [0, 4, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, 5, 0], radius = 0.5, material = "green glass"},
-   {center = [1, 0, 0], radius = 0.5, material = "dull grey"},
-   {center = [2, 0, 0], radius = 0.5, material = "blue mirror"},
-   {center = [3, 0, 0], radius = 0.5, material = "green glass"},
-   {center = [4, 0, 0], radius = 0.5, material = "dull grey"},
-   {center = [5, 0, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, 0, -1], radius = 0.5, material = "green glass"},
-   {center = [0, 0, -2], radius = 0.5, material = "dull grey"},
-   {center = [0, 0, -3], radius = 0.5, material = "blue mirror"},
-   {center = [0, 0, -4], radius = 0.5, material = "green glass"},
-   {center = [0, 0, -5], radius = 0.5, material = "dull grey"},
-   {center = [0, -1, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, -2, 0], radius = 0.5, material = "green glass"},
-   {center = [0, -3, 0], radius = 0.5, material = "dull grey"},
-   {center = [0, -4, 0], radius = 0.5, material = "blue mirror"},
-   {center = [0, -5, 0], radius = 0.5, material = "green glass"},
-   {center = [-1, 0, 0], radius = 0.5, material = "dull grey"},
-   {center = [-2, 0, 0], radius = 0.5, material = "blue mirror"},
-   {center = [-3, 0, 0], radius = 0.5, material = "green glass"},
-   {center = [-4, 0, 0], radius = 0.5, material = "dull grey"},
-   {center = [-5, 0, 0], radius = 0.5, material = "blue mirror"}
+#    {center = [-6.5, 0, 3], radius = 4, material = "dull grey"},
+#    {center = [0, 0, 3], radius = 2.5, material = "blue mirror"},
+#    {center = [6.5, 0, 3], radius = 4, material = "green glass"},
+#
+#   {center = [0, 0, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 0, 1], radius = 0.5, material = "green glass"},
+#   {center = [0, 0, 2], radius = 0.5, material = "dull grey"},
+#   {center = [0, 0, 3], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 0, 4], radius = 0.5, material = "green glass"},
+#   {center = [0, 0, 5], radius = 0.5, material = "dull grey"},
+#   {center = [0, 1, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 2, 0], radius = 0.5, material = "green glass"},
+#   {center = [0, 3, 0], radius = 0.5, material = "dull grey"},
+#   {center = [0, 4, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 5, 0], radius = 0.5, material = "green glass"},
+#   {center = [1, 0, 0], radius = 0.5, material = "dull grey"},
+#   {center = [2, 0, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [3, 0, 0], radius = 0.5, material = "green glass"},
+#   {center = [4, 0, 0], radius = 0.5, material = "dull grey"},
+#   {center = [5, 0, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 0, -1], radius = 0.5, material = "green glass"},
+#   {center = [0, 0, -2], radius = 0.5, material = "dull grey"},
+#   {center = [0, 0, -3], radius = 0.5, material = "blue mirror"},
+#   {center = [0, 0, -4], radius = 0.5, material = "green glass"},
+#   {center = [0, 0, -5], radius = 0.5, material = "dull grey"},
+#   {center = [0, -1, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, -2, 0], radius = 0.5, material = "green glass"},
+#   {center = [0, -3, 0], radius = 0.5, material = "dull grey"},
+#   {center = [0, -4, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [0, -5, 0], radius = 0.5, material = "green glass"},
+#   {center = [-1, 0, 0], radius = 0.5, material = "dull grey"},
+#   {center = [-2, 0, 0], radius = 0.5, material = "blue mirror"},
+#   {center = [-3, 0, 0], radius = 0.5, material = "green glass"},
+#   {center = [-4, 0, 0], radius = 0.5, material = "dull grey"},
+#   {center = [-5, 0, 0], radius = 0.5, material = "blue mirror"}
 ]
 planes = [
-    # {point = [0, 0, -1], normal = [0, 0, 1], material = "ground"}
+#     {point = [0, 0, -1], normal = [0, 0, 1], material = "ground"}
 ]
 rectangles = []
 cubes = []
-triangles = []
+triangles = [
+   {vertices = [[2, 0, 0], [0, 2, 0], [0, 0, 2]], material = "dull grey"}
+]
 meshes = [
-   {path = "teapot.tri", material = "dull grey", translate = [0, 0, 0], scale = 1, rotate = [0, 0, 0]}
+#   {path = "teapot.tri", material = "dull grey", translate = [0, 0, 0], scale = [5, 5, 5], rotate = [0, 0, 0]}
 ]
 
 
